--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header::before {
     position: absolute;
     top: 0;
     right: 0;
-    width: 80%; 
+    width: 80%;
     height: 100%;
     background-color: #FAAB78;
     clip-path: polygon(100% 0, 0 100%, 100% 100%);
@@ -65,6 +65,20 @@ nav a {
 
 nav a:hover {
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 768px) {
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav a {
+        margin-left: 0;
+        margin-bottom: 10px; 
+        font-size: 1em; 
+    }
 }
 
 .footer-logo img {
@@ -188,6 +202,17 @@ footer {
 }
 
 @media (max-width: 768px) {
+	
+	header::before {
+        width: 100%;  
+        clip-path: polygon(100% 0, 0 100%, 100% 100%); 
+    }
+
+    header {
+        padding: 15px 20px; 
+        font-size: 1.2em;
+    }
+	
     .footer-container {
         flex-direction: column;
         align-items: center;
@@ -494,12 +519,12 @@ section#about p {
 }
 
 .hero h1 {
-    font-size: 2.5em;
+    font-size: 2em;
     margin-bottom: 10px;
 }
 
 .hero p {
-    font-size: 1.2em;
+    font-size: 1.1em;
     margin-bottom: 20px;
 }
 
