--- a/style.css
+++ b/style.css
@@ -37,17 +37,6 @@ header {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
 }
-
-header::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%; 
-    height: 100%;
-    background-color: #FAAB78;
-    z-index: 0;
-}
 @media (min-width: 768px) {
     header::before {
         content: '';
@@ -57,8 +46,8 @@ header::before {
         width: 80%; 
         height: 100%;
         background-color: #FAAB78;
-        clip-path: none; 
         z-index: 0;
+        clip-path: polygon(100% 0, 0 100%, 100% 100%); 
     }
 }
 header > * {
@@ -215,14 +204,15 @@ footer {
 @media (max-width: 768px) {
 	
     header::before {
-        content: '';  
+        content: '';
         position: absolute;
         top: 0;
-        right: 50%;  
-        width: 2px;  
+        right: 0;
+        width: 100%; 
         height: 100%;
-        background-color: #FAAB78;  
+        background-color: #FAAB78; 
         z-index: 0;
+        clip-path: none; 
     }
 
     header {
