--- a/style.css
+++ b/style.css
@@ -202,18 +202,6 @@ footer {
 }
 
 @media (max-width: 768px) {
-	
-    header::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 100%; 
-        height: 100%;
-        background-color: #FAAB78; 
-        z-index: 0;
-        clip-path: none; 
-    }
 
     header {
         padding: 15px 20px; 
@@ -231,6 +219,14 @@ footer {
 
     .logo img, .footer-logo img {
         height: 120px; 
+    }
+	
+	.logo img {
+        background-color: #FAAB78;  
+        padding: 20px;
+        border-radius: 10px;   
+        display: block;
+        margin: 0 auto;  
     }
 }
 
